# Efficia

./: .env.example  .gitignore  README.md  main.py  main.spec  pyproject.toml  run.bat  run.py  run_api.py  run_migration.py  run_script.py  run_service.py
api/: __init__.py  models.py
api/chatbot/: __init__.py  models.py  utils.py
assets/: search_bar_address.json
db/: __init__.py  constants.py  database.py  helpers.py  models.py
db/chatbot/: __init__.py  constants.py  database.py  helpers.py  models.py
db/migrate/: __init__.py  first_updating_url.py  second_block_id.py
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  utils.tsx
frontend/src/components/activity/: ActivityHistory.tsx
frontend/src/components/ai/: AIChatbot.tsx
frontend/src/components/ai/Blob/: index.tsx
frontend/src/components/assistant-ui/: markdown-text.tsx  thread.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
frontend/src/components/dashboard/: ActivityChart.tsx  BlockedApps.tsx  CurrentSession.tsx  GoalsCard.tsx  NotesPreview.tsx  RecentActivity.tsx  TodosCard.tsx
frontend/src/components/layout/: SideNavigation.tsx
frontend/src/components/layout/chatbot/: SideNavigation.tsx
frontend/src/components/timeline/: SelectDate.tsx  TimelineEvent.tsx
frontend/src/components/ui/: stat-card.tsx
frontend/src/hooks/: use-backend.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/chatbot/: api.ts  utils.ts
frontend/src/pages/: AIAssistant.tsx  AIChat.tsx  ActivityHistory.tsx  Analytics.tsx  AppView.tsx  Apps.tsx  Blocks.tsx  Categories.tsx  CategoryView.tsx  Dashboard.tsx  Goals.tsx  Index.tsx  NotFound.tsx  Notes.tsx  Sessions.tsx  Settings.tsx  Timeline.tsx  Timers.tsx  Todos.tsx  URLView.tsx  URLs.tsx
frontend/src/pages/chatbot/: chat.tsx  home.tsx  tmp.tmp.tsx  tmp.tsx  voice.home.tsx
frontend/src/stores/: useThemeStore.ts
ml/: langchain_classification.py  langchain_generate_title.py
scripts/: get_debug_info.py
services/: __init__.py  background_service.py  background_service_helper.py  constants.py  fileinfo.py  utils.py
tests/: __init__.py  test_activity.py  test_alarm_timers.py  test_block_and_category.py  test_db_helper.py  test_goal.py  test_notes.py  test_session.py  test_todo.py
tests/test_chatbot/: __init__.py  test_chat.py  test_message.py
