[project]
name = "efficia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.11",
    "huggingface-hub==0.28.1",
    "langchain-groq>=0.2.5",
    "logging>=0.4.9.6",
    "moshi==0.2.2",
    "openai>=1.66.3",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "pywinauto>=0.6.9",
    "requests>=2.32.3",
    "silentcipher",
    "tokenizers==0.21.0",
    "torch==2.4.0",
    "torchao==0.9.0",
    "torchaudio==2.4.0",
    "torchtune==0.4.0",
    "transformers==4.49.0",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-psutil>=7.0.0.20250218",
    "types-pywin32>=308.0.0.20250128",
]

[tool.uv.sources]
silentcipher = { git = "https://github.com/SesameAILabs/silentcipher", rev = "master" }
