[project]
name = "efficia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.11",
    "langchain>=0.3.20",
    "langchain-groq>=0.2.5",
    "logging>=0.4.9.6",
    "openai>=1.66.3",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "pytz>=2025.1",
    "pywinauto>=0.6.9",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "mcp[cli]>=1.6.0",
    "chainlit>=2.4.400",
    "langgraph>=0.3.29",
    "cryptography>=44.0.2",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "boto3>=1.37.34",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pyinstaller>=6.13.0",
    "pystray>=0.19.5",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-psutil>=7.0.0.20250218",
    "types-pywin32>=308.0.0.20250128",
]

